# Monk

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  index.tsx  main.tf  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/api/: .dockerignore  Dockerfile  README  README.md  assistant_text.json  docker.sh  generate_yaml.sh  gitbuildupsummary.py  gitparser.py  gitsummarize.py  main.py  messages.json  nginx.conf  nginx_readme.md  openapi.yaml  pyproject.toml  requirements.in  requirements.txt  slack_channel_messages.py  thread_embeddings.py  thread_headline.py  thread_summary.py  topic_clustering.py  update_single_block.py
backend/api/config/: .env.example  __init__.py  logging.conf
backend/api/routes/admin/: routers.py
backend/api/routes/blocks/: models.py  routers.py
backend/api/routes/google/: models.py
backend/api/routes/slack/: models.py  routers.py
backend/api/routes/storage/: models.py  routers.py
backend/api/routes/threads/: block.py  child_thread.py  models.py  routers.py  search.py  semantic_search_mongo.py  user_flags.py
backend/api/scripts/db/: thread_embeddings.py  (+2 more)
backend/api/tests/: package.json  pnpm-lock.yaml  test_unauthorized_access.py  unauthorized.spec.ts
backend/api/utils/: caching.py  cleanup_db.py  clustering.py  db.py  embedding.py  gitparser.py  gitsummarize.py  hashicorp_api.py  headline.py  llms.py  milvus_vector.py  scrapper.py  similarity.py  slack_channel_messages.py  storage.py  summary.py  thread_embeddings.py  topics.py
(+576 files in other folders)
