[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "motor",
    "supertokens-python==0.23.1",
    "boto3",
    "beautifulsoup4==4.12.3",
    "redis[hiredis]",
    "pymilvus",
    "pyyaml",
    "openai",
    "pytest-playwright",
    "pytest-asyncio"
]

